# **************************************************************************
# SoWin/configure.in

AC_INIT(src/Inventor/Win/SoWin.h)

# **************************************************************************
# If the Microsoft Visual C++ cl.exe compiler is available, set us up for
# compiling with it and to generate an MSWindows .dll file.

# FIXME: replace with the SIM_AC_MSVC_SUPPORT macro as soon as we
# have converted auxconfig-dir to cfg/m4/. 20001123 mortene.

BUILD_WITH_MSVC=false
sim_ac_msvccc=`cd $srcdir; pwd`/conf-macros/msvccc
if test -z "$CC" && test -z "$CXX" && $sim_ac_msvccc >/dev/null 2>&1; then
  CC=$sim_ac_msvccc
  CXX=$sim_ac_msvccc
  export CC CXX
  BUILD_WITH_MSVC=true
fi
AC_SUBST(BUILD_WITH_MSVC)

# **************************************************************************
# *******  MAKING RELEASES  ************************************************
# **************************************************************************
#
# Library versioning
# ==================
#
# When making releases, follow these rules:
#
#  * if there has been made any incompatible changes to the ABI¹:
#    SOWIN_MAJOR_VERSION += 1, SOWIN_MINOR_VERSION = 0,
#    SOWIN_MICRO_VERSION = 0.
#
#    (If you don't know if the changes that have been made since last
#    release is binary incompatible with the last ABI, you shouldn't
#    be making releases.)
#
#  * if there has been made additions to the API², but the ABI
#    is still backwards compatible: SOWIN_MAJOR_VERSION unchanged,
#    SOWIN_MINOR_VERSION += 1, SOWIN_MICRO_VERSION = 0.
#
#  * for bugfix releases and other changes which do not change the interface
#    at all, keep SOWIN_MAJOR_VERSION and SOWIN_MINOR_VERSION unchanged
#    and SOWIN_MICRO_VERSION += 1.
#
# Note that our MAJOR.MINOR.MICRO versioning scheme differs somewhat from
# the idea of library versioning applied by Libtool. According to Libtool,
# libraries should be versioned according to a CURRENT.AGE.REVISION scheme.
# Here CURRENT is supposed to be increased by 1 each time the API changes,
# and AGE increased by 1 along with CURRENT each time the API changes in a
# way which keeps the ABI backwards compatible. If compatibility is broken,
# AGE is set to 0 (while CURRENT is still increased by 1). The REVISION
# number has the same semantics as our MICRO number.
#
# To cooperate in a painless way with Libtool, we choose to "convert" our
# MAJOR.MINOR.MICRO scheme to Libtool's idea of versioning like this:
#
#    * Libtool's CURRENT number is increased when our MAJOR number is
#      increased.
#
#    * Libtool's AGE number is always kept at 0 (i.e. we will never make
#      ABI compatible releases where we increase the MAJOR number).
#
#    * Libtool's REVISION number will be a combination of our MINOR and
#      MICRO number, like this: REVISION = MINOR * 100 + MICRO, so we get
#      a REVISION number monotonically increasing in the way we want.
#
#      Note that this little "simplification" has two important
#      ramifications: 1) we can't make more than 99 bugfix-releases of
#      the library unless a MINOR or MAJOR version increase has happened,
#      2) we need to keep a release history log to map from Libtool numbers
#      back to our "native" MACRO.MINOR.MICRO versioning, as Libtool encodes
#      the filename of the library with it's own CURRENT.AGE.REVISION scheme.
#      This way it'll still be easy for us to find out which version a
#      bugreport belongs to: we must tell the user to check out the full
#      filename of the library, then we can just look up the MAJOR.MINOR.MICRO
#      number from the release history log below.
#
#
# **************************************************************************
# CVS maintenance
# ===============
#
# When making a release from the HEAD branch, increase the MAJOR number
# and make a new branch as follows (from the HEAD):
#
#   $ cd [sowin_srcdir_HEADbranch]
#   $ cvs tag -b sowin-MAJOR-0
#
# (The explicit mention of "sowin" in the branch name is necessary
# because we also tag this name onto all included CVS modules.)
#
# Note that new releases from the HEAD branch should only happen when
# there has been incompatible interface changes.
#
#
# When adding new functionality while keeping backward ABI compatibility,
# increase the MINOR number and make a new branch as follows:
#
#   $ cd [sowin_srcdir_MAJORbranch]
#   $ cvs tag -b sowin-MAJOR-MINOR
#
# (Where MINOR>0 always).
#
#
# Bugfix releases should be handled by setting a tag on the
# sowin-MAJOR-MINOR with the latest MAJOR.MINOR.x release,
# like this:
#
#   $ cd [sowin_srcdir_MAJORMINORbranch]
#   $ cvs tag sowin-MAJOR-MINOR-MICRO
#
# (Where MICRO>0 always).
#
# **************************************************************************
# Distribution binaries
# =====================
#
#  * MSWindows SDK: this is constructed as a self-extracting InstallShield
#    package. Run ``configure'' and ``make install'' on an MSWin-box with
#    the correct setup (latest Cygwin, MSVC++ v6.0 and InstallShield Express
#    v2.12), then execute
#
#         $ cd [sowin_builddir]/build
#         $ make ispkg
#
#    (Installshield's IsxBuild.exe need to be in your path.)
#
#    A self-extracting executable SETUPEX.EXE with the InstallShield install
#    should then be available under [sowin_builddir]/build/sowin/. Move
#    to <ftp://ftp.sim.no/pub/coin/bin/win32/sowin-@SOWIN_VERSION@.exe>.
#
#  * RPM packages: follow the instructions at the top of the
#    build/sowin.spec.in file, make one package for each major platform
#    version we have access to (RedHat v5, v6, v7, Mandrake?, SuSE, etc)
#    for the architectures we want (i386, ...). Place packages under
#    <ftp://ftp.sim.no/pub/coin/bin/[platform]/[arch]/>.
#
# **************************************************************************
# Release history
# ===============
#
# Release version     | Libtool version   |                 |
# (MAJOR.MINOR.MICRO) | (CURRENT.AGE.REV) | CVS Branch name | Tag name
# --------------------+-------------------+-----------------+-----------------
#     0.9.99          |     0.0.999       |      HEAD       | sowin-0-9-99
#
#
# **************************************************************************
# Footnotes
# =========
#
# ¹ Application Binary Interface. This covers any publicly exposed
#   functions, function signatures, structures (and classes for C++
#   code). If any functions has been removed or changed, or if any
#   structures/classes has been modified in any way, the ABI has
#   most likely been made incompatible with earlier releases.
#
# ² Application Programmer's Interface. This is the functions and data
#   structures/classes exposed to the application programmer for
#   interaction with the library.
#
# **************************************************************************

SOWIN_MAJOR_VERSION=0
SOWIN_MINOR_VERSION=9
SOWIN_MICRO_VERSION=99
SOWIN_VERSION=$SOWIN_MAJOR_VERSION.$SOWIN_MINOR_VERSION.$SOWIN_MICRO_VERSION
VERSION=$SOWIN_VERSION

AC_SUBST(SOWIN_MAJOR_VERSION)
AC_SUBST(SOWIN_MINOR_VERSION)
AC_SUBST(SOWIN_MICRO_VERSION)
AC_SUBST(SOWIN_VERSION)

# Libtool versioning
LT_CURRENT=$SOWIN_MAJOR_VERSION
LT_AGE=0
LT_REVISION=`expr $SOWIN_MINOR_VERSION \* 100 + $SOWIN_MICRO_VERSION`

AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)


AC_DEFINE_UNQUOTED(SOWIN_MAJOR_VERSION, $SOWIN_MAJOR_VERSION,
  [Define to the major version of SoWin])
AC_DEFINE_UNQUOTED(SOWIN_MINOR_VERSION, $SOWIN_MINOR_VERSION,
  [Define to the minor version of SoWin])
AC_DEFINE_UNQUOTED(SOWIN_MICRO_VERSION, $SOWIN_MICRO_VERSION,
  [Define to the micro version of SoWin])
AC_DEFINE_UNQUOTED(SOWIN_VERSION, "$SOWIN_VERSION",
  [Version string for SoWin])

# **************************************************************************
#  Locate C++ compiler and set C++ as the default language to use
#  in tests. The configure script will automatically terminate if
#  it doesn't find a C++ compiler.

AC_PROG_CXX
AC_LANG_CPLUSPLUS

# **************************************************************************

AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(libSoWin, $SOWIN_VERSION)

AM_CONFIG_HEADER(config.h)

AM_DISABLE_STATIC
AM_MAINTAINER_MODE
AC_PROG_LIBTOOL

# These are used for constructing the sowin-config file.
SOWIN_EXTRA_CPPFLAGS=$CPPFLAGS
SOWIN_EXTRA_LDFLAGS=$LDFLAGS
SOWIN_EXTRA_LIBS=$LIBS
AC_SUBST(SOWIN_EXTRA_CPPFLAGS)
AC_SUBST(SOWIN_EXTRA_LDFLAGS)
AC_SUBST(SOWIN_EXTRA_LIBS)

# **************************************************************************
# Header files we might want.

AC_CHECK_HEADERS([windows.h unistd.h sys/types.h sys/time.h X11/extensions/SGIMisc.h X11/Xproto.h X11/extensions/XInput.h netinet/in.h])

# **************************************************************************
# Compiler control.

SIM_AC_COMPILE_DEBUG(
  [CPPFLAGS="$CPPFLAGS -DSOWIN_DEBUG=1"],
  [CPPFLAGS="$CPPFLAGS -DSOWIN_DEBUG=0"])

SIM_AC_CHECK_VAR_FUNCTIONNAME

SIM_AC_DEBUGSYMBOLS
SIM_AC_RTTI_SUPPORT
SIM_EXCEPTION_HANDLING
SIM_PROFILING_SUPPORT
SIM_COMPILER_WARNINGS

SIM_AC_SOGUI_STATIC_DEFAULTS

# **************************************************************************
# Variable substitutions for using libSoQt in the generic code.

GUI=WIN
Gui=Win
gui=win
WIDGET="HWND"
EVENT="MSG *"
COMPONENTHEADER=""

AC_SUBST(Gui)
AC_SUBST(gui)
AC_SUBST(GUI)
AC_SUBST(WIDGET)
AC_SUBST(EVENT)
AC_SUBST(COMPONENTHEADER)

# **************************************************************************
# Search for and set up stuff we depend on.

# check for Coin library and its dependencies
SIM_AC_HAVE_COIN_IFELSE([
  CPPFLAGS="$CPPFLAGS $sim_ac_coin_cppflags"
  LDFLAGS="$LDFLAGS $sim_ac_coin_ldflags"
  LIBS="$sim_ac_coin_libs $LIBS"
  SOWIN_EXTRA_CPPFLAGS="$SOWIN_EXTRA_CPPFLAGS $sim_ac_coin_cppflags"
  SOWIN_EXTRA_LDFLAGS="$SOWIN_EXTRA_LDFLAGS $sim_ac_coin_ldflags"
  SOWIN_EXTRA_LIBS="$sim_ac_coin_libs $SOWIN_EXTRA_LIBS"
], AC_MSG_ERROR(couldn't compile and link against Coin))


# Check for the availability of this node (it is used in the hidden
# line rendering), which is not part of older Inventor implementations.
SIM_AC_HAVE_INVENTOR_NODE(SoPolygonOffset)

SIM_AC_HAVE_SOMOUSEBUTTONEVENT_BUTTONS

SIM_AC_HAVE_INVENTOR_FEATURE(
    [for SoCamera::setStereoMode()],
    [#include <Inventor/nodes/SoPerspectiveCamera.h>],
    [/* SoCamera is abstract, so test with SoPerspectiveCamera */
     SoPerspectiveCamera * c = new SoPerspectiveCamera;
     c->setStereoMode(SoCamera::MONOSCOPIC);],
    HAVE_SOCAMERA_SETSTEREOMODE)

# **************************************************************************
# Misc set-up.

SIM_EXPAND_DIR_VARS

# Functions from the gdi32.lib library is used.
LIBS="$LIBS -lgdi32"
SOWIN_EXTRA_LIBS="$SOWIN_EXTRA_LIBS -lgdi32"

# **************************************************************************
# Remove redundant options from certain option lists.

SIM_AC_UNIQIFY_LIST(SOWIN_EXTRA_CPPFLAGS, -I$includedir $SOWIN_EXTRA_CPPFLAGS)
SIM_AC_UNIQIFY_LIST(SOWIN_EXTRA_LDFLAGS, -L$libdir $SOWIN_EXTRA_LDFLAGS)
SIM_AC_UNIQIFY_LIST(SOWIN_EXTRA_LIBS, $SOWIN_EXTRA_LIBS)

SIM_AC_UNIQIFY_LIST(CPPFLAGS, $CPPFLAGS)
SIM_AC_UNIQIFY_LIST(LDFLAGS, $LDFLAGS)
SIM_AC_UNIQIFY_LIST(LIBS, $LIBS)

# **************************************************************************
# Remaining setup based on platform.

if $BUILD_WITH_MSVC; then
  CPPFLAGS="-DSOWIN_MAKE_DLL $CPPFLAGS"

  SOWIN_EXTRA_CPPFLAGS="$SOWIN_EXTRA_CPPFLAGS -DSOWIN_DLL"

  # We use a version suffix on the .dll-file, so several incompatible
  # (major) versions can be installed on a system.
  #
  # BTW, when linking DLLs, the 3rd-party .lib files will be
  # linked into the .dll file. I believe it is still advisable to
  # list all libs used upon `sowin-config --libs`, as we can then
  # also use them from "parent" code (remember that their interfaces
  # is not exposed from the DLL) without any fuss.
  SOWIN_EXTRA_LIBS="-lsowin$SOWIN_MAJOR_VERSION $SOWIN_EXTRA_LIBS"

else
  SOWIN_EXTRA_LIBS="-lSoWin $SOWIN_EXTRA_LIBS"

  # For the build/sowin.spec RPM specification file.
  SIM_AC_ISO8601_DATE(sowin_configure_date)
  AC_SUBST(sowin_configure_date)
fi

# **************************************************************************
# Configure the submodule with the examples.

AC_CONFIG_SUBDIRS(data)

# **************************************************************************
# finally generate all the directories, makefiles, autogenerated
# sourcefiles, and config headers.

AC_OUTPUT([
	Makefile
	sowin-config
	src/Inventor/Win/Makefile
	src/Inventor/Win/devices/Makefile
	src/Inventor/Win/widgets/Makefile
	src/Inventor/Win/viewers/Makefile
], [
	chmod a+x sowin-config
])

echo ""
echo "Now, run 'make install' to build and install."
echo ""

# **************************************************************************
